--- a/my-site-2/styles.css
+++ b/my-site-2/styles.css
@@ -1,6 +1,4 @@
 
-
-
 * {box-sizing: border-box;
 }
 
@@ -20,18 +18,13 @@
 
 
 body{ margin: 0;
-background-color: #350045;
-  font-family: FrankG_Bold;
-margin-top: 120px;
-
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: 1980px 920px;
+  background-color: #350045;
+    font-family: FrankG_Bold;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: 1980px 920px;
 
    }
-
-
-
 
 
 section{
@@ -39,7 +32,84 @@ section{
   padding: 0;
   position: relative;
   text-align: center;
+  top: -3vh;
 }
+
+
+header {
+  background-color: #350045;
+  text-align: -webkit-center;
+
+}
+
+footer {
+  background-color: #4a0b5d;
+  padding: 10px;
+  text-align: center;
+  color: white;
+
+ position: sticky
+ height: 50px;
+  margin-top: -50px;
+
+}
+
+footer:hover{
+  opacity: 100% ;
+  box-shadow: 0 1px 8px rgba(225,225,225,10.25), 0 1px 5px rgba(0,0,0,100.22);
+  transition: 0.35s linear;
+}
+
+
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+
+h2{  font-family: FrankG_Bold;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.20);
+    color: black;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+    text-transform: uppercase;
+    font-size: 60px;
+   margin-top: -70px;
+    padding: 0;
+    line-height: 38px;
+    cursor: pointer;
+
+}
+
+h3{ font-family: FrankG_Bold;
+text-align: right;
+font-size: 17px;
+color:white;
+margin-top: 18.62px;
+  line-height: 1.2;
+ 
+}
+
+
+h4{ 
+  font-family: FrankRuhlProLight;
+  text-align: right;
+  font-size: 14px;
+  color: #8e7ea7;
+}
+
+#main {
+
+    padding-bottom: 30px;
+    padding-top: 50px;
+    z-index: 99;
+ 
+}
+
+
+
 
 
 
@@ -83,15 +153,12 @@ section{
 .col-8{
   width: 56.8%;
   padding: 15px;
-
 }
 
 
 .col-10{
   width: 71%;
   padding-bottom: 0;
-
-
 
 }
 
@@ -111,77 +178,10 @@ section{
   margin-left: 7.1%;
 }
 
-.title .title1 .title2{
-  font-size: 105px;
-
-}
 
 
-
-#one {
-  padding-bottom: 100px;
-
-}
-
-#footer{
-background-color: #4a0b5d;
-position: fixed;
-top: 675px;
-opacity: 80%;
-z-index: 99;
-transition: 0.35s linear;
-}
-
-#footer:hover{
-  opacity: 100% ;
-  box-shadow: 0 1px 8px rgba(225,225,225,10.25), 0 1px 5px rgba(0,0,0,100.22);
-  transition: 0.35s linear;
-}
-
-
-
-
-svg{
-  width: 100px;
-  height: 100px;
-  color: white;
-  top: 100px;
-position: relative;
-z-index: 9999;
-}
-
-
-
-h2{  font-family: FrankG_Bold;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.20);
-    color: black;
-  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-    text-transform: uppercase;
-    font-size: 60px;
-   margin-top: -70px;
-    padding: 0;
-    line-height: 38px;
-    cursor: pointer;
-
-}
-
-h3{ font-family: FrankG_Bold;
-text-align: right;
-font-size: 20px;
-color:white;
-margin-top: 18.62px;
-  line-height: 1.2;
- 
-}
-
-
-h4{ 
-  font-family: FrankRuhlProLight;
+.text2 {
   text-align: right;
-  font-size: 14px;
-  color: #8e7ea7;
 }
 
 .text3{
@@ -190,87 +190,25 @@ h4{
 
 
 
-
-
-
-
-
-br{line-height: 1.5; }
-
-
-
-
-
-
-
-
-
 .move-area{
-  width: 2500px;
-  height: 100vh;
 
    display: block;
     font-size: 22px;
-    float: right;
-    line-height: 20px;
+ 
+  
     padding-left: 5px;
-    position: fixed;
-    left: 50%;
-    top:21%;
+    position: absolute;
+    top:150px;
+    left: 49vw;
     transform: translatex(-50%);
  z-index: 10;
-    cursor: pointer none;
+ 
     transition: all .3s;
     vertical-align: middle;
     text-align: center;
     display: inline-block;
 }
 
-
-
-
-
-.move-area2{
-  width: 500px;
-  height: 50px;
-
-   display: block;
-    font-size: 22px;
-    float: right;
-    line-height: 20px;
-    padding-left: 5px;
-    position: fixed;
-    left: 50%;
-    top:21%;
-    transform: translatex(-50%);
- z-index: 10;
-   cursor:none; 
-    transition: all .3s;
-    vertical-align: middle;
-    text-align: center;
-    display: inline-block;
-}
-
-
-
-
-.left {
-  top: -1%;
-  left: 40%;
-}
-
-.right {
-  top: -1%;
-  left: 63%;
-  z-index: 999999;
-}
-
-
-
-.container {
-  width: 100%;
-
-}
 
 .eye {
   position: relative;
@@ -297,119 +235,77 @@ box-shadow: 0 0 0 0.5px black;
 
 
 
-.dots{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top:-60px;
-  flex: row;
+
+svg{
+
+  color: white;
 }
 
 
-
-
-
-
-.route {
+.route  {
     width: 270px;
     height: 170px;
 
 }
 
-
 .route img {
-        width: 270px;
-   
-    position: fixed;
-    text-align: center;
-    display: inline-block;
-    left: 42%;
-    margin-top: 20px;
+    width: 270px;
+    position: absolute; 
+    left: 35vw;
 }
-
-
-
-.route{
-      display: block;
-       position: relative;
-       margin-top: -124px;
-}
-
-
-
-
 
 .main{
   position:relative;
 
-  float:right;
- 
-  height:595px;
-
-   display: block;
-z-index: 10;
-
-  
+ direction: rtl;
+  height:505px;
 }
 
-ul{display: block;
+
+.title{
+  width: 271px;
+  height: 166px;
+
+}
+
+
+ul{
+  display: block;
     padding-inline-start: 10px;
   }
 
+
 .videos{
- position:absolute;
+ direction: rtl;
 left:1;
 width: 320px;
-  height: 100px;
+
   border:0px solid ;
   overflow: scroll;
-  direction: rtl;  /* <-- the trick */
+
+ 
 }
 
-.box::before{ content:''; display:block; width:400%; height:1px; }
 
-
-
-
-.videos {
+div.videos {
   min-width:100%;
   min-height:40px;
   display:block;
   color:white;
-  height:400px;
+
   display: flex;
+flex-direction: row;
 
 }
-
-
-
-
-::-webkit-scrollbar {
-    width: 1px;
-    height: 2px;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0); 
-    border-radius: 1px;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 1px;
-    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0); 
-}
-
-
-
 
 .imgG {
   width: 600px;
   height: 400px;
   opacity: 85%;
- 
+ max-width:100%;
+ height:auto;
 
 }
-
 
 
 .imgGL{
@@ -434,76 +330,22 @@ width: 320px;
 
 }
 
+
+::-webkit-scrollbar {
+    width: 1px;
+    height: 2px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0); 
+    border-radius: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 1px;
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0); 
+}
+
 @keyframes scroll {
   100% { right: -2650px;
   } 
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
